# Fusion

./: Cargo.toml  Config.json  README.md  build.rs  history.txt
.github/workflows/: build.yml
src/: banner.rs  config.rs  core.rs  main.rs  utils.rs
src/client/: client.rs  operations.rs  prompt.rs
src/client/cli/: cmd.rs
src/client/rustyline-derive/: Cargo.toml
src/client/rustyline-derive/src/: lib.rs
src/config/: config.rs
src/core/: postdata.rs  run_linux.rs  run_mac.rs  run_windows.rs  tasks.rs
src/core/systeminfo/: systeminfo_windows.rs
src/core/tasks/: screenshot.rs  win.rs
src/core/tasks/macos/: shell.rs
src/core/tasks/win/: loads.rs  shell.rs
src/server/: agents.rs  db.rs  jobs.rs  listeners.rs  postdata.rs  server.rs
src/server/db/: agents.rs  db.rs  listeners.rs
src/server/handlers/: agent.rs  implant.rs  task.rs
src/server/implants/: generate.rs
src/server/listeners/: http.rs  https.rs  listener.rs
src/utils/: fs.rs  random.rs  uuid.rs
